# jupyter-rust-widget

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
jupyter_counter/: Cargo.toml  pyproject.toml
jupyter_counter/src/: lib.rs
jupyter_counter_frontend/: Cargo.toml  index.js  webpack.config.js
jupyter_counter_frontend/src/: lib.rs
jupyter_counter_types/: Cargo.toml
jupyter_counter_types/src/: lib.rs
jupyter_rust_widget_backend/: Cargo.toml
jupyter_rust_widget_backend/src/: lib.rs
jupyter_rust_widget_frontend/: Cargo.toml  webpack.config.js
jupyter_rust_widget_frontend/src/: lib.rs
