[package]
name = "jupyter_counter_frontend"
version = "0.1.0"
edition = "2024"

[lib]
name = "jupyter_counter_frontend"
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
web-sys.workspace = true
wasm-bindgen.workspace = true
jupyter_counter_types = { path = "../jupyter_counter_types" }
jupyter_rust_widget_frontend = { path = "../jupyter_rust_widget_frontend" }
